--- a/Upload property.html
+++ b/Upload property.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="imgs/favicons/favicon.png" type="image/x-icon">
-    <title>JAIPUR PROPERTY PORTAL - Home</title>
+    <title>Upload Your Properties - Shree Ram Associates Multiplex Pvt. Ltd.</title>
     <link rel="stylesheet" href="style/Upload property.css">
     <script src="JavaScript/Upload property.js"></script>
 </head>
