--- a/Upload property.html
+++ b/Upload property.html
@@ -29,7 +29,7 @@
                             <span>Whatsapp</span></a></div>
                     <div class="facebook"><a href="https://www.facebook.com/SRAMPvt/" target="_blank"><i
                                 class="fa fa-facebook-square"></i> <span>FaceBook</span></a></div>
-                    <div class="instagram"><a href="https://www.instagram.com/abhi._.ek/" target="_blank"><i
+                    <div class="instagram"><a href="https://www.instagram.com/shreerammultiplex/" target="_blank"><i
                                 class="fa fa-instagram"></i> <span>Instagram</span></a></div>
                     <div class="youtube"><a href="https://www.youtube.com/@SHREERAMASSOCIATESMULTIPLEXPvt@gmail.com"
                             target="_blank"><i class="fa fa-youtube-play"> <span>YouTube</span></i></a></div>
@@ -97,7 +97,7 @@
                             Send E-mail</span></a></div>
                 <div class="facebook"><a href="https://www.facebook.com/SRAMPvt/" target="_blank">
                         <span><i class="fa fa-facebook-square"></i> FaceBook</span></a></div>
-                <div class="instagram"><a href="https://www.instagram.com/abhi._.ek/" target="_blank"><span><i
+                <div class="instagram"><a href="https://www.instagram.com/shreerammultiplex/" target="_blank"><span><i
                                 class="fa fa-instagram"></i> Instagram</span></a></div>
                 <div class="youtube"><a href="https://www.youtube.com/@SHREERAMASSOCIATESMULTIPLEXPvt@gmail.com"
                         target="_blank"><span><i class="fa fa-youtube-play"></i> YouTube</span></a></div>
